# git-pyclone

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.env  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  github-actions-demo.yml  github-cd.yml  github-ci.yml
git_pyclone/: __init__.py
tests/: test_core.py  test_git_pyclone.py
